2002-12-30 (THH):  *** Version 0.25 ***
  * Added some more bus error entries in intercept.c (just like on a real ST).
  * Updated the readme.txt.

2002-12-23 (THH):
  * Moved Hatari's line-a opcodes (0xa000 and 0xa0ff) from tos.c to cartimg.c
    so that the extended VDI resolutions should now also work with hard disk
    emulation turned on.
  * WinSTon turned off screen rendering while booting in a VDI resolution
    mode. This has been enable again, so that the user can see what's going
    on. However, booting in a VDI mode is now a little bit slower (especially
    on TOS 2.06).

2002-12-22 (THH):
  * VDI resolutions with 4 colors are now working, too.
  * Fixed some bugs in screen.c

2002-11-30 (THH):
  * Added the possibility to select the GEM resolution to the TOS/GEM dialog.
  * Rewrote ConvertVDIRes_2Colour() in C for big monochrome VDI resolutions.

2002-10-13 (THH):
  * Rewrote ConvertVDIRes_16Colour() in C and added Line-A/VDI patches
    so that Hatari now also features a VDI big resolution mode.

2002-09-21 (THH):
  * Added YM and WAV sound recording (to hatari.ym or hatari.wav since the
    GUI does not support editing strings yet).
  * Introduced "System" setup dialog for configuring the ST hardware
    (currently CPU and blitter).

2002-08-11 (THH):
  * Fixed bug in the blitter function, so the letters in the menu bar of the
    desktop are now correct.

2002-07-08 (THH):
  * Some more endianess patches for spec512 screens - looks much better now!
  * Fixed the bug that caused Hatari to crash when it was not able to load
    the font image.

2002-07-04 (THH):
  * Added experimental blitter emulation (taken from STonX).
    "Wings Of Death" started working now - wow!

2002-07-03 (THH):
  * Separated SDL_INIT_JOYSTICK and SDL_INIT_AUDIO from Main_Init(), since
    failures during joystick/audio initialization shouldn't be fatal.
  * Short-Cuts now also work with the "apple" key on Mac OS X.